# printlinter

./: .coverage  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  TODO.md  create_ignored_rep_for_test.sh  for_imported_print_version.md  justfile  main.py  pyproject.toml
cli_app/: __init__.py  __main__.py  cli.py  main.py
doc/changelog/: CHANGELOG.fr.md
doc/readme/: README.fr.md
printlinter/: __init__.py  classes.py  config.py  ignored_processing.py  parser.py  visitor.py
py_printlinter/: __init__.py  classes.py  ignored_processing.py  parser.py  visitor.py
tests/: conftest.py
tests/bdd/cli/: conftest.py  test_cli_bdd.py  utils_bdd.py
tests/bdd/scenarios/: lint.feature
tests/cli/: config.yml  config_real_projects.yml  test_command.py  test_on_real_project.py  test_utils.py
tests/config/: conftest.py  test_config.py  test_disabled_rules.py
tests/core/: conftest.py  test_classes.py  test_ignored_processing.py  test_parser.py  test_visitor.py
tests/core/parser/: conftest.py  test_get_ignored_block_with_ignored_block.py  test_get_ignored_block_without_ignored_block.py  test_get_ignored_files__with_ignored_files.py  test_get_ignored_files__without_ignored_files.py  test_get_ignored_lines__with_ignored_lines.py  test_get_ignored_lines__without_ignored_files.py  test_get_ignored_lines__without_ignored_lines.py  test_get_ignored_next_line.py  test_miscellaneous.py  test_parse_file.py
tests/input_files/: toto_0.py  toto_1.py
tests/testing_files/bdd/config/full/: custom.yaml  printlinter.json
tests/testing_files/bdd/config/partial/: custom.yaml  printlinter.json
tests/testing_files/bdd/input/with_print/with_ignore_block/: a_file.py
tests/testing_files/bdd/input/with_print/with_ignore_block/a_folder/b/: d.py
tests/testing_files/bdd/input/with_print/with_ignore_file/: a_file.py
tests/testing_files/bdd/input/with_print/with_ignore_file/a_folder/b/: d.py
tests/testing_files/bdd/input/with_print/with_ignore_inline/: a_file.py
tests/testing_files/bdd/input/with_print/with_ignore_inline/a_folder/a/: c.py
tests/testing_files/bdd/input/with_print/with_ignore_inline/a_folder/b/: d.py
tests/testing_files/bdd/input/with_print/with_ignore_next_line/: a_file.py
tests/testing_files/bdd/input/with_print/with_ignore_next_line/a_folder/: README.md  e.py
tests/testing_files/bdd/input/with_print/with_ignore_next_line/a_folder/b/: d.py
tests/testing_files/bdd/input/with_print/without_ignore/a_folder/b/: d.py
tests/testing_files/config/auto/take_default/: readme.md
tests/testing_files/config/auto/take_json/: printlinter.json
tests/testing_files/config/auto/take_pyproject/: pyproject.toml
tests/testing_files/config/auto/take_toml/: printlinter.toml
tests/testing_files/config/auto/take_yaml/: printlinter.yaml  printlinter.yml  pyproject.toml
tests/testing_files/config/auto/take_yml/: printlinter.json  printlinter.yml
tests/testing_files/config/cli/: output_level_1.yml  output_level_2.yml  output_level_3.yml
tests/testing_files/config/errors/: README.md  output_level_4.yml  sorted_by_toto.yml  target_version_27.yml  target_version_312.yml  target_version_313.yml  target_version_36.yml  target_version_error__len_to_long.yml  target_version_error__not_digit.yml
tests/testing_files/config/full_config/: config.json  config.toml  config.yaml  config.yml
tests/testing_files/config/partial_config/json/: if_and_dr.json  only_col.json  only_dr.json  only_ig.json  only_tv.json  tv_and_col.json  tv_and_dr.json  tv_and_if.json  tv_if_and_col.json
tests/testing_files/config/partial_config/toml/: if_and_dr.toml  only_col.toml  only_dr.toml  only_ig.toml  only_tv.toml  tv_and_col.toml  tv_and_dr.toml  tv_and_if.toml  tv_if_and_col.toml
tests/testing_files/config/partial_config/yaml/: if_and_dr.yaml  only_col.yaml  only_dr.yaml  only_ig.yaml  only_tv.yaml  tv_and_col.yaml  tv_and_dr.yaml  tv_and_if.yaml  tv_if_and_col.yaml
tests/testing_files/config/partial_config/yml/: if_and_dr.yml  only_col.yml  only_dr.yml  only_ig.yml  only_tv.yml  tv_and_col.yml  tv_and_dr.yml  tv_and_if.yml  tv_if_and_col.yml
tests/testing_files/ignored_block/: mix.py  ppl003.py
tests/testing_files/ignored_block/no_re_enable/: all.py  mix.py  ppl001.py  ppl002.py  ppl003.py  ppl004.py  ppl005.py  ppl006.py
tests/testing_files/ignored_block/re_enable/: all.py  ignore_nothing.py  mix.py  ppl001.py  ppl002.py  ppl003.py  ppl004.py  ppl005.py  ppl006.py
tests/testing_files/ignored_files/: disable_in_wrong_place.py  disable_valid_but_not_in_first_line.py  ignore_all.py  ignore_nothing.py  ignore_ppl000.py  ignore_ppl001.py  ignore_ppl002.py  ignore_ppl003.py  ignore_ppl004.py  ignore_ppl005.py  ignore_ppl006.py
tests/testing_files/ignored_next_line/: ppl001.py  ppl002.py  ppl003.py  ppl004.py  ppl005.py  ppl006.py
tests/testing_files/mixed/: mixed0.py
tests/testing_files/mixed/mixed1/: mixed2.py
tests/testing_files/pprint/: pprint1.py
tests/testing_files/pprint/pprint2/: pprint3.py
tests/testing_files/sys/stderr/write/: stderr1.py
tests/testing_files/sys/stderr/write/stderr2/: stderr3.py
tests/testing_files/sys/stderr/writelines/: stderr1.py
tests/testing_files/sys/stderr/writelines/stderr2/: stderr3.py
tests/testing_files/sys/stdout/write/: stdout1.py
tests/testing_files/sys/stdout/write/stdout2/: stdout3.py
tests/testing_files/sys/stdout/writelines/: stdout1.py
tests/testing_files/sys/stdout/writelines/stdout2/: stdout3.py
tests/toto2/: toto3.py
